@@ -838,20 +838,8 @@ comment|// replace the revision token in file name with the resolved revision
 name|String
 name|pattern
 init|=
-operator|(
-name|String
-operator|)
-name|getArtifactPatterns
+name|getWholePattern
 argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-decl_stmt|;
-name|pattern
-operator|=
-name|pattern
 operator|.
 name|replaceFirst
 argument_list|(
@@ -861,7 +849,7 @@ literal|"-"
 operator|+
 name|rev
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 return|return
 name|findResourceUsingPattern
 argument_list|(
@@ -938,20 +926,8 @@ comment|// replace the revision token in file name with the resolved revision
 name|String
 name|pattern
 init|=
-operator|(
-name|String
-operator|)
-name|getIvyPatterns
+name|getWholePattern
 argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-decl_stmt|;
-name|pattern
-operator|=
-name|pattern
 operator|.
 name|replaceFirst
 argument_list|(
@@ -961,7 +937,7 @@ literal|"-"
 operator|+
 name|rev
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 return|return
 name|findResourceUsingPattern
 argument_list|(
@@ -1018,25 +994,12 @@ return|return
 literal|null
 return|;
 block|}
-name|String
-name|pattern
-init|=
-operator|(
-name|String
-operator|)
-name|getIvyPatterns
-argument_list|()
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|shouldUseMavenMetadata
 argument_list|(
-name|pattern
+name|getWholePattern
+argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -1879,36 +1842,15 @@ argument_list|(
 name|token
 argument_list|)
 operator|&&
-name|isM2compatible
-argument_list|()
-operator|&&
-name|isUseMavenMetadata
-argument_list|()
-condition|)
-block|{
-if|if
-condition|(
-operator|(
-operator|(
-name|String
-operator|)
-name|getIvyPatterns
-argument_list|()
-operator|.
-name|get
+name|shouldUseMavenMetadata
 argument_list|(
-literal|0
-argument_list|)
-operator|)
-operator|.
-name|endsWith
-argument_list|(
-name|M2_PER_MODULE_PATTERN
+name|getWholePattern
+argument_list|()
 argument_list|)
 condition|)
 block|{
 comment|// now we must use metadata if available
-comment|/*                  * we substitute tokens with ext token only in the m2 per module pattern, to match                  * has has been done in the given pattern                  */
+comment|/*              * we substitute tokens with ext token only in the m2 per module pattern, to match              * has has been done in the given pattern              */
 name|String
 name|partiallyResolvedM2PerModulePattern
 init|=
@@ -1940,7 +1882,7 @@ name|partiallyResolvedM2PerModulePattern
 argument_list|)
 condition|)
 block|{
-comment|/*                      * the given pattern already contain resolved org and module, we just have to                      * replace the per module pattern at the end by 'maven-metadata.xml' to have the                      * maven metadata file location                      */
+comment|/*                  * the given pattern already contain resolved org and module, we just have to                  * replace the per module pattern at the end by 'maven-metadata.xml' to have the                  * maven metadata file location                  */
 name|String
 name|metadataLocation
 init|=
@@ -2001,7 +1943,7 @@ block|}
 block|}
 else|else
 block|{
-comment|/*                      * this is probably because the given pattern has been substituted with jar ext,                      * if this resolver has optional module descriptors. But since we have to use                      * maven metadata, we don't care about this case, maven metadata has already                      * been used when looking for revisions with the pattern substituted with                      * ext=xml for the "ivy" pattern.                      */
+comment|/*                  * this is probably because the given pattern has been substituted with jar ext,                  * if this resolver has optional module descriptors. But since we have to use                  * maven metadata, we don't care about this case, maven metadata has already                  * been used when looking for revisions with the pattern substituted with                  * ext=xml for the "ivy" pattern.                  */
 return|return
 operator|new
 name|String
@@ -2009,7 +1951,6 @@ index|[
 literal|0
 index|]
 return|;
-block|}
 block|}
 block|}
 return|return
@@ -2638,24 +2579,12 @@ name|token
 argument_list|)
 condition|)
 block|{
-name|String
-name|pattern
-init|=
-operator|(
-name|String
-operator|)
-name|patterns
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
 name|shouldUseMavenMetadata
 argument_list|(
-name|pattern
+name|getWholePattern
+argument_list|()
 argument_list|)
 condition|)
 block|{
